# theatrical-players-refactoring-kata-1

./: .gitignore  README.md  setup.cfg  setup.py  statement.py
src/theatrical_players/: invoice.py  main.py  order.py  performance.py  play.py  play_types.py  statement.py
src/theatrical_players/data/: invoice.py  performance.py  play.py
src/theatrical_players/domain/: currencies.py  i_currency.py  play_types.py  statement.py
src/theatrical_players/presentation/: html.py  i_presentation.py  presentation.py  text.py
tests/: test_statement.py  test_statement.test_statement_with_new_play_types.approved.txt
